fixed one heading not centered

--- a/css/custom.css
+++ b/css/custom.css
@@ -304,6 +304,7 @@
   right: 40px;
   width: 80px;
   transform-origin: center bottom;
+  text-align: center;
   z-index: 2;
 }
 
